# advent-of-code

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
2015/day01/c/: 2015_day01.c
2015/day01/cobol/: 2015_day01.cbl  2015_day01.cob
2015/day01/go/: 2015_day01.go
2015/day01/python/: 2015_day01.py
2015/day01/typescript/: 2015_day01.ts
2015/day02/python/: 2015_day02.py
2015/day03/python/: 2015_day03.py
2015/day04/python/: 2015_day04.py
2015/day05/python/: 2015_day05.py
2015/day06/python/: 2015_day06.py
2016/day01/python/: 2016_day01.py
2016/day02/python/: 2016_day02.py
2017/day01/python/: 2017_day01.py
2017/day02/python/: 2017_day02.py
2018/day01/python/: 2018_day01.py
2018/day02/python/: 2018_day02.py
2019/day01/: input.txt
2019/day01/python/: 2019_day01.py
2019/day02/python/: 2019_day02.py
2020/day01/: input.txt
2020/day01/python/: 2020_day01.py
2020/day02/python/: 2020_day02.py
2021/day01/python/: 2021_day01.py
2021/day02/python/: 2021_day02.py
2022/day01/typescript/: 2022_day01.ts
2022/day02/python/: 2022_day02.py
2022/day02/typescript/: 2022_day02.ts
2022/day03/typescript/: 2022_day03.ts
2022/day04/typescript/: 2022_day04.ts
2022/day07/python/: 2022_day07.py
2022/day09/python/: 2022_day09.py
2022/day1/python/: 2022_day1.py
2022/day1/typescript/: 2022_day1.ts
2022/day10/python/: 2022_day10.py
2022/day11/python/: 2022_day11.py
2022/day12/python/: 2022_day12.py
2023/day07/: input.txt
2023/day08/: input.txt
2023/day16/: input.txt
2023/day19/: input.txt
(+37 files in other folders)
