[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Gert-Jan van der Ham <mail@gjvdh.nl>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
