[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Gert-Jan van der Ham <mail@gjvdh.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
